Negative unlogged time doesn't make much sense, does it?

--- a/public/index.html
+++ b/public/index.html
@@ -580,7 +580,7 @@
         }
 
         function updateDisplay() {
-            const unloggedCodeTime = totalHackatimeSeconds - hackatimeSecondsUntilLatestLog;
+            const unloggedCodeTime = Math.max(0, totalHackatimeSeconds - hackatimeSecondsUntilLatestLog);
             const totalSinceLastDemo = trackedSecondsSinceLastDemo + unloggedCodeTime;
 
             const maxDemo = 10 * 60 * 60;
