--- a/public/index.html
+++ b/public/index.html
@@ -379,6 +379,7 @@
             }
 
             // Fetch from API
+            params = Object.fromEntries(Object.entries(params).filter(([_, v]) => v != undefined))
             const paramsString = new URLSearchParams(params).toString();
             if(paramsString) endpoint += `?${paramsString}`;
             
