Send notifications on page load if granted

--- a/public/index.html
+++ b/public/index.html
@@ -743,6 +743,7 @@
         (async () => {
             await updateShiba();
             await updateHackatime();
+            sendNotifications();
 
             let i = 0;
             setInterval(async () => {
